k8s/02-app.yaml
#-------------------
# 1. PHP Backend
# -------------------
apiVersion: v1
kind: Service
metadata:
  name: php-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
    - port: 9000
  selector:
    app: hrm-php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-php
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrm-php
  template:
    metadata:
      labels:
        app: hrm-php
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: php
          image: 789351387140.dkr.ecr.ap-northeast-2.amazonaws.com/hrm-project/php:latest
          imagePullPolicy: Always
---
# -------------------
# 2. Nginx Frontend
# -------------------
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
    - port: 8080
  selector:
    app: hrm-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-nginx
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrm-nginx
  template:
    metadata:
      labels:
        app: hrm-nginx
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nginx
          image: 789351387140.dkr.ecr.ap-northeast-2.amazonaws.com/hrm-project/nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
